Added: Updating/Tweaking models, Rendering data from database to template on dashboard

--- a/crm/accounts/templates/accounts/dashboard.html
+++ b/crm/accounts/templates/accounts/dashboard.html
@@ -15,10 +15,17 @@
             </a>
             <table class="table table-sm">
                 <tr>
-                    <th></th>
                     <th>Customer</th>
                     <th>Orders</th>
                 </tr>
+
+                {% for customer in customers %}
+                    <tr>
+                        <td>{{customer.name}}</td>
+                        <td>{{customer.phone}}</td>
+                    </tr>
+                {% endfor %}
+
             </table>
         </div>
     </div>
@@ -37,6 +44,18 @@
                     <th>Update</th>
                     <th>Remove</th>
                 </tr>
+
+                {% for order in orders %}
+                    <tr>
+                        <td>{{order.product}}</td>
+                        <td>{{order.date_created}}</td>
+                        <td>{{order.status}}</td>
+                        <td><a href="">Update</a></td>
+                        <td><a href="">Delete</a></td>
+                    </tr>
+                {% endfor %}
+
+                
             </table>
         </div>
         
