--- a/crm/accounts/templates/accounts/status.html
+++ b/crm/accounts/templates/accounts/status.html
@@ -8,11 +8,13 @@
                     <h5 class="card-title">Total Orders</h5>
                 </div>
                 <div class="card-body">
-                    <h3 class="card-title"></h3>
+                    <h3 class="card-title">{{total_orders}}</h3>
                 </div>
             </div>
         </div>
     </div>
+
+
 
     <div class="col">
         <div class="col-md">
@@ -21,11 +23,13 @@
                     <h5 class="card-title">Orders Delivered</h5>
                 </div>
                 <div class="card-body">
-                    <h3 class="card-title"></h3>
+                    <h3 class="card-title">{{delivered}}</h3>
                 </div>
             </div>
         </div>
     </div>
+
+
 
     <div class="col">
         <div class="col-md">
@@ -34,7 +38,7 @@
                     <h5 class="card-title">Orders Pending</h5>
                 </div>
                 <div class="card-body">
-                    <h3 class="card-title"></h3>
+                    <h3 class="card-title">{{pending}}</h3>
                 </div>
             </div>
         </div>
