Added navbar links, dashboard links for customers, button styling

--- a/crm/accounts/templates/accounts/dashboard.html
+++ b/crm/accounts/templates/accounts/dashboard.html
@@ -15,12 +15,14 @@
             </a>
             <table class="table table-sm">
                 <tr>
+                    <th></th>
                     <th>Customer</th>
                     <th>Orders</th>
                 </tr>
 
                 {% for customer in customers %}
                     <tr>
+                        <td><a class="btn btn-small btn-info" href="{% url 'customer' customer.id %}">View</a></td>
                         <td>{{customer.name}}</td>
                         <td>{{customer.phone}}</td>
                     </tr>
@@ -50,8 +52,8 @@
                         <td>{{order.product}}</td>
                         <td>{{order.date_created}}</td>
                         <td>{{order.status}}</td>
-                        <td><a href="">Update</a></td>
-                        <td><a href="">Delete</a></td>
+                        <td><a class="btn btn-small btn-info" href="">Update</a></td>
+                        <td><a class="btn btn-small btn-danger" href="">Delete</a></td>
                     </tr>
                 {% endfor %}
 
