Added Create, Update, & Delete order functionality using Model Forms.

--- a/crm/accounts/templates/accounts/customer.html
+++ b/crm/accounts/templates/accounts/customer.html
@@ -62,8 +62,8 @@
                             <td>{{order.product.category}}</td>
                             <td>{{order.date_created}}</td>
                             <td>{{order.status}}</td>
-                            <td><a class="btn btn-sm btn-info" href="">Update</a></td>
-                            <td><a class="btn btn-sm btn-danger" href="">Remove</a></td>
+                            <td><a class="btn btn-small btn-info" href="{% url 'update_order' order.id %}">Update</a></td>
+                        <td><a class="btn btn-small btn-danger" href="{% url 'delete_order' order.id %}">Delete</a></td>
                         </tr>
                     {% endfor %}
 
