--- a/crm/accounts/templates/accounts/dashboard.html
+++ b/crm/accounts/templates/accounts/dashboard.html
@@ -36,7 +36,7 @@
         <h5>LAST 5 ORDERS</h5>
         <hr>
         <div class="card card-body">
-            <a class="btn btn-primary btn-sm btn-block" href="">Creater Orders
+            <a class="btn btn-primary btn-sm btn-block" href="{% url 'create_order' %}">Creater Order
             </a>
             <table class="table table-sm">
                 <tr>
@@ -52,8 +52,8 @@
                         <td>{{order.product}}</td>
                         <td>{{order.date_created}}</td>
                         <td>{{order.status}}</td>
-                        <td><a class="btn btn-small btn-info" href="">Update</a></td>
-                        <td><a class="btn btn-small btn-danger" href="">Delete</a></td>
+                        <td><a class="btn btn-small btn-info" href="{% url 'update_order' order.id %}">Update</a></td>
+                        <td><a class="btn btn-small btn-danger" href="{% url 'delete_order' order.id %}">Delete</a></td>
                     </tr>
                 {% endfor %}
 
