--- a/crm/accounts/templates/accounts/customer.html
+++ b/crm/accounts/templates/accounts/customer.html
@@ -37,7 +37,9 @@
         <div class="col">
             <div class="card card-body">
                 <form method="get">
-                    <button class="btn btn-primary" type="submit">Search</button>
+                    {{myFilter.form}}
+                    
+                <button class="btn btn-primary" type="submit">Search</button>
                 </form>
             </div>
         </div>
@@ -50,7 +52,7 @@
                 <table class="table table-sm">
                     <tr>
                         <th>Product</th>
-                        <th>Category</th>
+                        <th>Note</th>
                         <th>Date Ordered</th>
                         <th>Status</th>
                         <th>Update</th>
@@ -59,7 +61,7 @@
                     {% for order in orders %}
                         <tr>
                             <td>{{order.product}}</td>
-                            <td>{{order.product.category}}</td>
+                            <td>{{order.note}}</td>
                             <td>{{order.date_created}}</td>
                             <td>{{order.status}}</td>
                             <td><a class="btn btn-small btn-info" href="{% url 'update_order' order.id %}">Update</a></td>
