Added user registration and baisc login authentication

--- a/crm/accounts/templates/accounts/delete.html
+++ b/crm/accounts/templates/accounts/delete.html
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="card card-body">
-            <p>Are you sure you want to DELETE "{{item}}"></p>
+            <p>Are you sure you want to DELETE "{{item}}"</p>
 
             <form action="{% url 'delete_order' item.id %}" method="POST">
                 {% csrf_token %}
