--- a/crm/accounts/templates/accounts/navbar.html
+++ b/crm/accounts/templates/accounts/navbar.html
@@ -23,6 +23,10 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'products' %}">Products</a>
         </li>
+        {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'account' %}">Settings</a>
+        </li>
         {% endif %}
       </ul>
     </div>
