--- a/crm/accounts/templates/accounts/user.html
+++ b/crm/accounts/templates/accounts/user.html
@@ -2,6 +2,30 @@
 {% block content %}
 {% include 'accounts/status.html' %}
 
-<h3>User Profile</h3>
+
+<div class="row">
+    <div class="col-md">
+        <div class="card card-body">
+            <table class="table table-sm">
+                <tr>
+                    <th>Product</th>
+                    <th>Note</th>
+                    <th>Date Ordered</th>
+                    <th>Status</th>
+                    
+                </tr>
+                {% for order in orders %}
+                    <tr>
+                        <td>{{order.product}}</td>
+                        <td>{{order.note}}</td>
+                        <td>{{order.date_created}}</td>
+                        <td>{{order.status}}</td>
+                    </tr>
+                {% endfor %}
+
+            </table>
+        </div>
+    </div>
+</div>
 
 {% endblock content %}
