--- a/portfolio/base/templates/base/home.html
+++ b/portfolio/base/templates/base/home.html
@@ -10,7 +10,29 @@
 </head>
 
 <body class="test">
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+        <a class="navbar-brand" href="#">Spencer Pequegnat</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
     <br>
+
     <div class="container">
         <div class="row">
             <div class="col-md-3">
@@ -25,29 +47,25 @@
                 <div class="card card-body h-100 border-info">
                     <h4>Summary</h4>
                     <hr>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
-                        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-                        sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    <p>Hi I'm Spencer, a physics graduate interested in programming.
                     </p>
                     <ul class="social-links">
-                        <li class="social"><a href="#"><i class="fab fa-github-square"></i></a></li>
-                        <li class="social"><a href="#"><i class="fab fa-linkedin"></i></i></a></li>
+                        <li class="social"><a href="https://github.com/spenpeq" target="_blank" rel="noopener noreferrer"><i class="fab fa-github-square"></i></a></li>
+                        <li class="social"><a href="https://www.linkedin.com/in/spencer-pequegnat/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></i></a></li>
                     </ul>
                     
                 </div>
             </div>
         </div>
+
         <br>
+        
         <div class="row">
             <div class="col-md-6">
                 <div class="card card-body h-100">
                     <h5>Experience</h5>
                     <hr>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
-                        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-                        sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    <p>B.S. in Physics
                     </p>
                 </div>
             </div>
@@ -55,15 +73,14 @@
                 <div class="card card-body h-100">
                     <h5>What I Know</h5>
                     <hr>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
-                        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-                        sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    <p>Python, Django, HTML, CSS, Data analysis, Data science, Git, AWS, Postgresql
                     </p>
                 </div>
             </div>
         </div>
+
         <br>
+
         <div class="row">
             <div class="col-md-6">
                 <div class="card card-body h-100">
@@ -88,7 +105,9 @@
                 </div>
             </div>
         </div>
+
         <br>
+
     </div>
      
 </body>
