added login page changes, new postgresql database via AWS, .env file

--- a/crm/accounts/templates/accounts/login.html
+++ b/crm/accounts/templates/accounts/login.html
@@ -120,6 +120,28 @@
 					</div>
 			
 				</div>
+
+				<div class="mt-4">
+					<div class="d-flex justify-content-center links">
+						<h5>Admin view:</h5> 
+					</div>
+					<div class="d-flex justify-content-center links">
+						Username: spencer
+					</div>
+					<div class="d-flex justify-content-center links">
+						Password: admin_password 
+					</div>
+					<div class="d-flex justify-content-center links">
+						<h5>Customer view:</h5> 
+					</div>
+					<div class="d-flex justify-content-center links">
+						Username: john
+					</div>
+					<div class="d-flex justify-content-center links">
+						Password: password_john 
+					</div>
+			
+				</div>
 			</div>
 		</div>
 	</div>
