--- a/crm/accounts/templates/accounts/dashboard.html
+++ b/crm/accounts/templates/accounts/dashboard.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="col-md-7">
-        <h5>LAST 5 ORDERS</h5>
+        <h5>ORDERS</h5>
         <hr>
         <div class="card card-body">
             <table class="table table-sm">
